app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import 'variables';

@import 'bootstrap-sprockets';
@import 'bootstrap';


@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
// @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext,greek-ext,greek,vietnamese,cyrillic,cyrillic-ext);



///////////// base //////////////

body {
  background-color: $secondary-color;
  color: $primary-type;
  font-family: $font;
  font-size: 16px;
  font-weight: $font-reg;
  min-height: 100vh;
  padding-top: 70px;
}

header {
  background-color: $primary-color;
  height: 120px;
  outline: 20px solid $secondary-color;
  position: fixed;
  left: 0;
  right: 0;
  top:0;
  z-index: 1030;
}

footer {
  background-color: $secondary-color;
  color: $inverse-type;
  font-size: 14px;
  min-height: 100px;
  padding:10px;
  width: 100%;
}
h3 {
	margin-top: 1.5em;
}

label {
  font-weight: $font-light;
}

a, a:link, a:visted {
  color: $accent-color;
}

/////////////// layout ///////////////////////


.header-nav {
  float: right;
  position: relative;
  top: -25px;
  right: 20px;
  z-index: 5 !important;
}

.container {
  background: none;
  margin: 0 auto;
  padding-top: 70px;
}

.overlay{
  background: $primary-bg-color;
  padding-top: 5px;
  padding-bottom: 5px;
}


////////////// modules //////////////////////

/// logo module //////////
.logo {
  color: $inverse-type;
  font-size:20px;
  font-weight: $font-light;
  text-transform: uppercase;
  letter-spacing: 2px;
  margin-left: 20px;
  position: relative;
  top: 20px;
}

.logo-link {
  color: $inverse-type;
  &:hover, &:active, &:visited {
    color: $inverse-type;
    text-decoration: none;
  }
}
.logo-img {
  padding-right: 15px;
  width: 200px;
}
.logo-text {
  position: absolute;
  left: 0px;
  top:40px;
}



.main-img {
  height: 30px;
}
.main-img > img {
  object-fit: cover;
  height: 420px;
  width: 100%;  
}

////////////////// form module //////////////////

.form-control {
  border:1px solid $primary-color;
}
.input-wide {
	width: 100%;
}

.input-group {
	display: block;
	margin-top: 40px;
}

.checkbox-label  {
	position: relative;
	padding-left: 30px;
	cursor: pointer;
	font-weight: normal;
  width: 100%;

}
.checkbox-label:before, .checkbox-label:after {
	font-family: FontAwesome;
	font-size: 30px;
	/*absolutely positioned*/
	position: absolute; top: -10px; left: 0;
}
.checkbox-label:before {
	content: '\f096'; /*unchecked*/
}
.checkbox-label:after {
	content: '\f046'; /*checked*/
	/*checked icon will be hidden by default by using 0 max-width and overflow hidden*/
	max-width: 0;
	overflow: hidden;
	opacity: 0.5;
	/*CSS3 transitions for animated effect*/
	transition: all 0.35s;
}

/*hiding the original checkboxes*/
.checkbox-input[type="checkbox"] {
	display: none;
}
/*when the user checks the checkbox the checked icon will animate in*/
.checkbox-input[type="checkbox"]:checked + label:after {
	max-width: 35px; /*an arbitratry number more than the icon's width*/
	opacity: 1; /*for fade in effect*/
}


// ************** block module ***************************
.block {
  border-radius: 25px;
  margin-top:70px;
  padding: 15px 45px 45px;
}

.block-blue {
  background-color: $primary-color;
  border: 5px solid $accent-color;
  color: $inverse-type;

}

/////////////// modal module /////////////
.modal-content {
  color: $primary-type;
}

/////////////// panel module ///////////////

.panel {
  color: $primary-type;
}

// ******************* FILTERS STYLES HERE ****************

.filter-option {
  background-color: $primary-bg-color;
  border-bottom: 1px solid $secondary-color;
  min-height: 40px;
  margin: 5px 0 5px 0;
  padding: 10px;
}

.filter-option:last-child {
  border-bottom: 0px;
}

/////////////////////////// buttons ///////////////////

.btn:hover {
    background-color: $accent-color;
    color: $inverse-type;
}

.btn-primary {
  background-color: $primary-color;
  border: none;
  color: $inverse-type;  
}
.btn-header {
	margin: 1px 0 1px 0;
  text-align: left;
  width: 100%;
  white-space: normal;
}

.btn-inverse {
  color: $primary-color;
  background-color: $inverse-type;
  border-color: $primary-color;
}

.btn.disabled {
  opacity: 1;
}
// animation on arrow

.btn-header > span {
  transition: transform .5s;
}

.arrowdown {
  transform: rotate(0deg);
}
.arrowup {
  transform: rotate(180deg);
}
// **************** SCHOOL LISTING STYLES **********************

.info-hed {
  color: $secondary-color;
  font-weight: $font-reg;
}

.info-well {
  min-height: 20px;
  margin-bottom: 20px;
}

.info-subhed {

}
// ****************** RESPONSIVE TABLES **************

table {
  // border: 1px solid $primary-type;
  border-collapse: collapse;
  margin: 0 0 20px 0;
  padding: 0;
  width: 100%;
  table-layout: fixed;
}

table tr {
  // border: 1px solid $secondary-color;
}
tr:nth-of-type(even) {
  background: $lighter-bg-color;
}

table th {
  background-color: $secondary-color;
  color: $inverse-type;
  font-weight: $font-bold;
}
table th,
table td {
  padding: 5px;
  text-align: center;
  border: 1px solid $secondary-color;

}
.secondary-subject {
	background-color: $secondary-color;
	color: $inverse-type;
	text-align: left;
}
@media screen and (max-width: 600px) {
  table {
    border: 0;
  }

  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  .subject {
		text-transform: uppercase;
  }
  .subject-solo {
  	background-color: $primary-color;
  	color: $inverse-type;
  	text-align: left;
  }
  table tr {
    border-bottom: 1px solid $secondary-color;
    display: block;
    margin-bottom: 15px;
  }
  table td {
    border:none;
    border-top: 1px solid $secondary-color;

    // border-top: 1px solid #333;
    display: block;
    text-align: right;
  }
  table td:before {
    /*
    * aria-label has no advantage, it won't be read inside a table
    content: attr(aria-label);
    */
    content: attr(data-label);
    float: left;
    font-weight: bold;
    text-align: left;
  }
  table td.subject-solo:before {
    content: "";
  }
  table td:last-child {
    border-bottom: 0;
  }
}

// ****************** STATES ******************************

.header-shrink {
  height: 60px;
}

.logo-shrink {
  width: 200px;
}

.logotext-shrink {
  display: none;
}

//////////// DESKTOP /////////
@media screen and (min-width: 768px) {
   body {
    background-image: $sign-in-bg;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  

  header {
    height: 70px;
  }
  .header-nav {
    top:10px;
  }
  .logo-img {
    width: 250px;
  }

  .logo-text {
    position: inherit;
    top: 0px;
    left: 0px;
  }
  
  .container {
    min-height: calc(100vh - 170px);
  }
  .main-img {
    display: none;
  }

  .information-page > .collapse
    {
        display: block;
    }

  #btn-search-filters, .nodisplay {
    display: none;
  }

  .nodisplay {
    display: none;
  }
}

